Bugfix: no more z-index problems in detail shows

--- a/app/web-app/semantic/components/card.css
+++ b/app/web-app/semantic/components/card.css
@@ -1047,6 +1047,10 @@ a.ui.card:hover,
   text-transform: uppercase;
   padding-left: .9rem;
 }
+.la-inline-lists {
+  position: relative;
+  z-index: 100;
+}
 .la-inline-lists dl {
   display: table-row;
 }
